<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:title="@string/timer_reset"
		android:icon="@android:drawable/ic_menu_close_clear_cancel"
		android:id="@+id/mi_reset_timer"
	/>
	<item android:title="@string/timer_mode"
		android:icon="@android:drawable/ic_menu_save"
		android:id="@+id/mi_timer_mode"
		android:visible="false"
	/>
	<item android:title="@string/save_timer_history"
		android:icon="@android:drawable/ic_menu_save"
		android:id="@+id/mi_save_timer_history"
		android:visible="false"
	/>
	<item android:title="@string/timer_history"
		android:icon="@android:drawable/ic_input_get"
		android:id="@+id/mi_timer_history"
	/>
	<item android:title="@string/preferences"
		android:icon="@android:drawable/ic_menu_preferences"
		android:id="@+id/mi_preferences"
	/>
</menu>
